# AoC_2024

./: .editorconfig  .env.template  .gitignore  AoC_2024.opam  LICENSE  README.md  Taskfile.yml  dune-project  shell.nix
lib/: dune
lib/day_01/: part_01.ml  part_02.ml
lib/day_02/: part_01.ml
lib/day_04/: part_01.ml
lib/day_04/php/: Grid.php  Input.php  Position.php  part_01.php
lib/file/: read_input.ml
templates/: part.ml
test/: day_01_part_01.ml  day_02_part_01.ml  day_04_part_01.ml  dune
